가입현황-상세내역-자동차보험 추가

--- a/mobile/resources/html/가입현황-상세내역_자동차보험.html
+++ b/mobile/resources/html/가입현황-상세내역_자동차보험.html
@@ -50,26 +50,16 @@
 				<div class="inner">
 					<div class="payment_info">
 						<div class="payment"><strong>69,030</strong>원</div>
-						<div class="info"><span class="tit">매월납</span> <span class="txt"><strong>12</strong>년</span></div>
+						<div class="info"><span class="tit">일시납</span></div>
 						<div class="logo">
-							<img alt="한화생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_lifeplanet_life.png"></div>
+							<img alt="교보라이프플래닛생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_lifeplanet_life.png"></div>
 					</div>
-					<div class="count_bar_box">
-						<div class="bar_rail">
-							<div class="bar" data-value="50%"><span class="percent"><em class="count">50</em>%</span></div>
-						</div>
-						<div class="txt_box">
-							<div class="left_txt">
-								<div class="no"><strong>122</strong>회</div>
-								<div class="txt">납입완료 <strong>118,559,750</strong>원</div>
-							</div>
-							<div class="right_txt">
-								<div class="no"><strong>240</strong>회</div>
-								<div class="txt">납입예정 <strong>118,559,750</strong>원</div>
-							</div>
-						</div>
-						<div class="point_txt">*갱신 등이 반영되지 않은 단순 예상 보험료</div>
+					<!-- 차량번호 : s -->
+					<div class="car_info">
+						<div class="no"><span class="tit">차량번호</span> <strong class="txt">12가 3456</strong></div>
+						<div class="period"><span class="tit">남은기간</span> <strong class="txt">D-43</strong></div>
 					</div>
+					<!-- 차량번호 : e -->
 					<div class="etc_info">
 						<div class="left_txt">
 							<span class="state">정상</span><!-- 해지시 class 'cancel' 추가-->
@@ -193,33 +183,22 @@
 							<li>
 								<div class="item">
 									<div class="tit_info">
-										<strong class="tit">질병입원일당</strong>
-										<div class="info">상해+질병 외래의료비</div>
+										<strong class="tit">기타</strong>
+										<div class="info">무보험자에 의한 상해 (개인용,업무용,이륜차)</div>
 									</div>
 									<div class="state_info">
-										<span class="date">2000.01.01~2099.12.31</span> <span class="info">2천만원</span>
+										<span class="date">2000.01.01~2099.12.31</span> <span class="info">2억원</span>
 									</div>
 								</div>
 							</li>
 							<li>
 								<div class="item">
 									<div class="tit_info">
-										<strong class="tit">질병입원일당</strong>
-										<div class="info">상해+질병 외래의료비</div>
+										<strong class="tit">기타</strong>
+										<div class="info">다른 자동차 운전담보</div>
 									</div>
 									<div class="state_info">
-										<span class="date">2000.01.01~2099.12.31</span> <span class="info">2천만원</span>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="item">
-									<div class="tit_info">
-										<strong class="tit">질병입원일당</strong>
-										<div class="info">상해+질병 외래의료비</div>
-									</div>
-									<div class="state_info">
-										<span class="date">2000.01.01~2099.12.31</span> <span class="info">2천만원</span>
+										<span class="date">2000.01.01~2099.12.31</span> <span class="info">2억원</span>
 									</div>
 								</div>
 							</li>
