로고 이미지 변경

--- a/mobile/resources/보장분석_guide_publishing.html
+++ b/mobile/resources/보장분석_guide_publishing.html
@@ -10,7 +10,7 @@
 	<link href="https://www.meritzfire.com/common/images/meritz_favicon.png" rel="apple-touch-icon">
 
 	<!-- CSS -->
-	<link href="cssu.renew.style.css" rel="stylesheet" type="text/css">
+	<link href="css/gu.renew.style.css" rel="stylesheet" type="text/css">
 
 	<!-- jQuery -->
 	<script src="/resources/js/jquery.min.js"></script>
