--- a/mobile/resources/보장분석_00.index.html
+++ b/mobile/resources/보장분석_00.index.html
@@ -60,7 +60,7 @@
 
 		#g_container.mobile .g_location .g_btn_area{position:absolute;top:10px;right:10px;}
 
-		#g_container.mobile #g_contents{margin-top:51px;}
+		#g_container.mobile #g_contents{margin-left:380px;margin-top:51px;}
 
 		.g_mobile_view{position:fixed;top:51px;left:10px;width:380px;height:740px;padding-top:20px;box-sizing:border-box;border:2px solid #212121;background:#212121;z-index:100 !important;}
 
@@ -81,6 +81,9 @@
 		<p class="tit_scr">보장분석 리뉴얼<span>HTML List</span></p>
 	</div>
 	<div id="g_contents">
+		<div class="g_mobile_view">
+			<iframe src="보장분석_guide_publishing.html" frameborder="0" name="frame_view"></iframe>
+		</div>
 		<div class="htmllist_list">
 			<table class="">
 				<caption>작업 목록</caption>
@@ -109,9 +112,9 @@
 					<td class="dep2">분석목록(고객목록)</td>
 					<td class="scr_name">검색결과(전체)</td>
 					<td class="scr_id">
-						<a href="htmlndex.html" target="_blank">index</a>
+						<a href="html/index.html"  target="frame_view">index</a>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
 					<td class="note">
 					</td>
 				</tr>
@@ -121,9 +124,9 @@
 					<td class="dep2">분석상세(고객상세)</td>
 					<td class="scr_name">전체현황</td>
 					<td class="scr_id">
-						<a href="htmlub.html" target="_blank">02.고객상세_01.전체현황.html</a>
+						<a href="html/sub.html"  target="frame_view">02.고객상세_01.전체현황.html</a>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
 					<td class="note">
 
 					</td>
@@ -133,9 +136,9 @@
 					<td class="dep2"></td>
 					<td class="scr_name">가입현황</td>
 					<td class="scr_id">
-						<a href="html입현황.html" target="_blank">02.고객상세_02.가입현황.html</a>
+						<a href="html/가입현황.html"  target="frame_view">02.고객상세_02.가입현황.html</a>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
 					<td class="note">
 
 					</td>
@@ -145,7 +148,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name">진단상세</td>
 					<td class="scr_id">
-						<a href="#" target="_blank"></a>
+						<a href="html/진단상세.html"  target="frame_view">02.고객상세_03.진단상세.html</a>
 					</td>
 					<td class="date"></td>
 					<td class="note">
@@ -157,9 +160,9 @@
 					<td class="dep2"></td>
 					<td class="scr_name">컨설팅</td>
 					<td class="scr_id">
-						<a href="html설팅.html" target="_blank">02.고객상세_04.컨설팅.html</a>
+						<a href="html/컨설팅.html"  target="frame_view">02.고객상세_04.컨설팅.html</a>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
 					<td class="note"><strong></strong></td>
 				</tr>
 				<tr>
@@ -167,9 +170,9 @@
 					<td class="dep2"></td>
 					<td class="scr_name">그래프</td>
 					<td class="scr_id">
-						<a href="html래프.html" target="_blank">02.고객상세_05.그래프.html</a>
+						<a href="html/그래프.html"  target="frame_view">02.고객상세_05.그래프.html</a>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
 					<td class="note"><strong></strong></td>
 				</tr>
 
@@ -178,9 +181,9 @@
 					<td class="dep2">팝업</td>
 					<td class="scr_name">index</td>
 					<td class="scr_id">
-						<a href="html업-고객등록동의문자발송.html" target="_blank">팝업-고객등록동의문자발송.html</a>
+						<a href="html/팝업-고객등록동의문자발송.html"  target="frame_view">팝업-고객등록동의문자발송.html</a>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
 					<td class="note"></td>
 				</tr>
 				<tr>
@@ -188,32 +191,33 @@
 					<td class="dep2"></td>
 					<td class="scr_name">가입현황</td>
 					<td class="scr_id">
-						<a href="html업-보장상세내역.html" target="_blank">팝업_보장 상세내역.html</a><br>
+						<a href="html/가입현황-상세내역.html"  target="frame_view">팝업_가입현황-상세내역.html</a><br>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
 					<td class="note">
 
 					</td>
 				</tr>
 				<tr>
-					<td class="dep1"></td>
-					<td class="dep2"></td>
-					<td class="scr_name"></td>
-					<td class="scr_id">
-						<a href="html업-보장상세내역(해지).html" target="_blank">팝업_보장 상세내역(해지).html</a><br>
-					</td>
-					<td class="date">2019.12.13</td>
-					<td class="note">
-					</td>
-				</tr>
+						<td class="dep1"></td>
+						<td class="dep2"></td>
+						<td class="scr_name">가입현황</td>
+						<td class="scr_id">
+							<a href="html/가입현황-상세내역_자동차보험.html"  target="frame_view">팝업_가입현황-상세내역-자동차보험.html</a><br>
+						</td>
+						<td class="date">2019.12.27</td>
+						<td class="note">
+	
+						</td>
+					</tr>
 				<tr>
 					<td class="dep1"></td>
 					<td class="dep2"></td>
 					<td class="scr_name">컨설팅</td>
 					<td class="scr_id">
-						<a href="html업-가계약%20추가.html" target="_blank">팝업_가계약 추가.html</a><br>
+						<a href="html/팝업-가계약%20추가.html"  target="frame_view">팝업_가계약 추가.html</a><br>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
 					<td class="note">
 					</td>
 				</tr>
@@ -222,9 +226,9 @@
 					<td class="dep2"></td>
 					<td class="scr_name"></td>
 					<td class="scr_id">
-						<a href="html업-가계약조회리스트.html" target="_blank">팝업_가계약조회리스트.html</a><br>
+						<a href="html/팝업-가계약조회리스트.html"  target="frame_view">팝업_가계약조회리스트.html</a><br>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
 					<td class="note">
 					</td>
 				</tr>
@@ -233,9 +237,9 @@
 					<td class="dep2"></td>
 					<td class="scr_name"></td>
 					<td class="scr_id">
-						<a href="html업-컨설팅전후비교.html" target="_blank">팝업_컨설팅전후비교.html</a><br>
+						<a href="html/컨설팅전후비교.html"  target="frame_view">팝업_컨설팅전후비교.html</a><br>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
 					<td class="note">
 					</td>
 				</tr>
@@ -244,9 +248,20 @@
 					<td class="dep2"></td>
 					<td class="scr_name"></td>
 					<td class="scr_id">
-						<a href="html업-권장금액보장군설정.html" target="_blank">팝업_권장금액보장군설정.html</a><br>
+						<a href="html/컨설팅전후비교_nodata.html"  target="frame_view">팝업_컨설팅전후비교_nodata.html</a><br>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
+					<td class="note">
+					</td>
+				</tr>
+				<tr>
+					<td class="dep1"></td>
+					<td class="dep2"></td>
+					<td class="scr_name"></td>
+					<td class="scr_id">
+						<a href="html/팝업-권장금액보장군설정.html"  target="frame_view">팝업_권장금액보장군설정.html</a><br>
+					</td>
+					<td class="date">2019.12.27</td>
 					<td class="note">
 					</td>
 				</tr>
@@ -255,9 +270,9 @@
 					<td class="dep2">퍼블리싱가이드</td>
 					<td class="scr_name"></td>
 					<td class="scr_id">
-						<a href="보장분석_guide_publishing.html" target="_blank">기존 보장분석 가이드</a>
+						<a href="html/보장분석_guide_publishing.html"  target="frame_view">기존 보장분석 가이드</a>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
 					<td class="note"><strong></strong></td>
 				</tr>
 				<tr>
@@ -265,9 +280,9 @@
 					<td class="dep2"></td>
 					<td class="scr_name"></td>
 					<td class="scr_id">
-						<a href="htmluide.html" target="_blank">form, button 가이드</a>
+						<a href="html/guide.html"  target="frame_view">form, button 가이드</a>
 					</td>
-					<td class="date">2019.12.13</td>
+					<td class="date">2019.12.27</td>
 					<td class="note"><strong></strong></td>
 				</tr>
 				</tbody>
