--- a/mobile/resources/html/가입현황-상세내역_자동차보험.html
+++ b/mobile/resources/html/가입현황-상세내역_자동차보험.html
@@ -179,30 +179,9 @@
 						</ul>
 					</div>
 					<div class="tab_cont">
-						<ul class="list">
-							<li>
-								<div class="item">
-									<div class="tit_info">
-										<strong class="tit">기타</strong>
-										<div class="info">무보험자에 의한 상해 (개인용,업무용,이륜차)</div>
-									</div>
-									<div class="state_info">
-										<span class="date">2000.01.01~2099.12.31</span> <span class="info">2억원</span>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="item">
-									<div class="tit_info">
-										<strong class="tit">기타</strong>
-										<div class="info">다른 자동차 운전담보</div>
-									</div>
-									<div class="state_info">
-										<span class="date">2000.01.01~2099.12.31</span> <span class="info">2억원</span>
-									</div>
-								</div>
-							</li>
-						</ul>
+						<div class="no_data">
+							<div class="txt">보장내역이 존재하지 않습니다.</div>
+						</div>
 					</div>
 				</div>
 				<!-- 유의사항 : s -->
