--- a/mobile/resources/html/그래프.html
+++ b/mobile/resources/html/그래프.html
@@ -213,7 +213,11 @@
 		<ul class="menu_area">
 			<li class="home"><a class="home" href="#">홈으로</a></li>
 			<li class="util">
-				<a class="menu01" href="#">등록</a> <a class="menu02" href="#">컨컬팅</a> <a class="menu03" href="#">pdf sample</a>
+				<a class="menu01" href="#"><span>고객<br>등록</span></a> 
+				<a class="menu02" href="#"><span>권장금액<br>보장군 설정</span></a> 
+				<a class="menu03" href="#"><span>가계약<br>조회</span></a> 
+				<a class="menu04" href="#"><span>PDF<br>샘플보기</span></a>
+				<a class="menu05" href="#"><span>PDF<br>보기</span></a>
 			</li>
 		</ul>
 		<div class="member_info_area">
