--- a/mobile/resources/보장분석_00.index.html
+++ b/mobile/resources/보장분석_00.index.html
@@ -146,6 +146,18 @@
 				<tr>
 					<td class="dep1"></td>
 					<td class="dep2"></td>
+					<td class="scr_name">가입현황</td>
+					<td class="scr_id">
+						<a href="html/가입현황_nodata.html"  target="frame_view">02.고객상세_02.가입현황_내역없음.html</a>
+					</td>
+					<td class="date">2019.12.27</td>
+					<td class="note">
+
+					</td>
+				</tr>
+				<tr>
+					<td class="dep1"></td>
+					<td class="dep2"></td>
 					<td class="scr_name">진단상세</td>
 					<td class="scr_id">
 						<a href="html/진단상세.html"  target="frame_view">02.고객상세_03.진단상세.html</a>
