가이드 리스트 수정

--- a/mobile/resources/보장분석_00.index.html
+++ b/mobile/resources/보장분석_00.index.html
@@ -162,7 +162,7 @@
 					<td class="scr_id">
 						<a href="html/진단상세.html"  target="frame_view">02.고객상세_03.진단상세.html</a>
 					</td>
-					<td class="date"></td>
+					<td class="date">2019.12.27</td>
 					<td class="note">
 						<strong></strong>
 					</td>
