텍스트 수정

--- a/mobile/resources/html/컨설팅전후비교.html
+++ b/mobile/resources/html/컨설팅전후비교.html
@@ -60,7 +60,7 @@
 					</ul>
 				</li>
 				<li class="after">
-					<div class="title">컨설팅 전</div>
+					<div class="title">컨설팅 후</div>
 					<ul class="list">
 						<li>
 							<div class="title">보유계약</div>
