텍스트 수정

--- a/mobile/resources/html/컨설팅.html
+++ b/mobile/resources/html/컨설팅.html
@@ -184,7 +184,7 @@
 				<button class="bottom_menu menu04"><span>컨설팅</span></button>
 			</li>
 			<li>
-				<button class="bottom_menu menu05"><span>그레프</span></button>
+				<button class="bottom_menu menu05"><span>그래프</span></button>
 			</li>
 		</ul>
 	</div>
