모바일 작업

--- a/mobile/resources/html/컨설팅.html
+++ b/mobile/resources/html/컨설팅.html
@@ -47,23 +47,23 @@
 	<div class="content_area bg_white">
 		<div class="top_info">
 			<ul>
-				<li class="default">
+				<li class="default new">
 					<div class="title">정상계약</div>
 					<div class="result"><strong>113</strong>건</div>
 				</li>
-				<li class="month">
+				<li class="month new">
 					<div class="title">정상계약</div>
 					<div class="result"><strong>11,264,530</strong>건</div>
 				</li>
-				<li class="list no">
+				<li class="list no new">
 					<div class="title">미가입</div>
 					<div class="result"><strong>13</strong></div>
 				</li>
-				<li class="list lack">
+				<li class="list lack new">
 					<div class="title">부족</div>
 					<div class="result"><strong>13</strong></div>
 				</li>
-				<li class="list good">
+				<li class="list good new">
 					<div class="title">충분</div>
 					<div class="result"><strong>13</strong></div>
 				</li>
