--- a/web/resources/html/index.html
+++ b/web/resources/html/index.html
@@ -38,7 +38,7 @@
 			changeLayout('main');
 			//최초로드시 메인 레이아웃으로 체인지
 			$(".tbody_box .link").click(function () {
-				changeLayout('sub');
+				changeLayout('sub', "sub.html");
 			})
 			//화면전환 샘플
 		})
