진단상세 텍스트수정

--- a/mobile/resources/html/진단상세.html
+++ b/mobile/resources/html/진단상세.html
@@ -126,7 +126,7 @@
 						<li><a class="text" href="#">치매</a></li>
 						<li><a class="text" href="#">운전자</a></li>
 						<li><a class="text" href="#">배상책임</a></li>
-						<li><a class="text" href="#">치아·골절·화상</a></li>
+						<li><a class="text" href="#">치아·화상·골절</a></li>
 					</ul>
 				</div>
 				<button class="btn_sub_menu_toggle">열기</button>
@@ -144,7 +144,7 @@
 						<li><a class="text" href="#">치매</a></li>
 						<li><a class="text" href="#">운전자</a></li>
 						<li><a class="text" href="#">배상책임</a></li>
-						<li><a class="text" href="#">치아·골절·화상</a></li>
+						<li><a class="text" href="#">치아·화상·골절</a></li>
 					</ul>
 				</div>
 			</div>
@@ -1364,7 +1364,7 @@
 					<!-- 치아,화상,골절 : s -->
 					<div class="state_info">
 						<div class="tit_area">
-							<h4 class="tit">치아,화상,골절 <span class="state lack">부족</span></h4>
+							<h4 class="tit">치아&middot;화상&middot;골절 <span class="state lack">부족</span></h4>
 							<button class="btn_text_arr">
 								<span>니즈환기</span>
 							</button>
