컨설팅수정

--- a/mobile/resources/html/컨설팅.html
+++ b/mobile/resources/html/컨설팅.html
@@ -119,16 +119,16 @@
 						<div class="etc_info">
 							<ul>
 								<li>
-									<span class="tit">보험료</span>
-									<div class="txt"><strong>50,000</strong>원</div>
+									<span class="tit">납입횟수</span>
+									<div class="txt"><strong>124/244</strong>회</div>
 								</li>
 								<li>
-									<span class="tit">납기/만기</span>
-									<div class="txt"><strong>20</strong>년/<strong>100</strong>년</div>
+									<span class="tit">납입률</span>
+									<div class="txt"><strong>51</strong>%</div>
 								</li>
 								<li>
-									<span class="tit">청약일</span>
-									<div class="txt"><strong>2019.10.14</strong></div>
+									<span class="tit">납입보험료</span>
+									<div class="txt"><strong>8,421,660</strong>원</div>
 								</li>
 							</ul>
 						</div>
@@ -146,16 +146,16 @@
 						<div class="etc_info">
 							<ul>
 								<li>
-									<span class="tit">보험료</span>
-									<div class="txt"><strong>50,000</strong>원</div>
+									<span class="tit">납입횟수</span>
+									<div class="txt"><strong>124/244</strong>회</div>
 								</li>
 								<li>
-									<span class="tit">납기/만기</span>
-									<div class="txt"><strong>20</strong>년/<strong>100</strong>년</div>
+									<span class="tit">납입률</span>
+									<div class="txt"><strong>51</strong>%</div>
 								</li>
 								<li>
-									<span class="tit">청약일</span>
-									<div class="txt"><strong>2019.10.14</strong></div>
+									<span class="tit">납입보험료</span>
+									<div class="txt"><strong>8,421,660</strong>원</div>
 								</li>
 							</ul>
 						</div>
