권장금액/보장군 설정 항목 수정

--- a/mobile/resources/html/팝업-권장금액보장군설정.html
+++ b/mobile/resources/html/팝업-권장금액보장군설정.html
@@ -71,7 +71,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>상해사</td>
+							<td>상해사망</td>
 							<td class="align_r">100,000</td>
 							<td class="align_r">
 								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
@@ -95,7 +95,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>질병사망</td>
+							<td>상해 3~79% 후유장해</td>
 							<td class="align_r">100,000</td>
 							<td class="align_r">
 								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
@@ -103,7 +103,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>질병사망</td>
+							<td>상해 80% 이상 후유장해</td>
 							<td class="align_r">100,000</td>
 							<td class="align_r">
 								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
@@ -111,7 +111,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>질병사망</td>
+							<td>일반암 진단비</td>
 							<td class="align_r">100,000</td>
 							<td class="align_r">
 								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
@@ -119,7 +119,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>질병사망</td>
+							<td>고액암 진단비</td>
 							<td class="align_r">100,000</td>
 							<td class="align_r">
 								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
@@ -127,7 +127,223 @@
 							</td>
 						</tr>
 						<tr>
-							<td>질병사망</td>
+							<td>유사암 진단비</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>뇌혈관</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>뇌졸중</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>뇌출혈</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>허혈성 심장질환 진단비</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>급성 심근경색증 진단비</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>질병입원</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>질병통원</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>상해입원</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>상해통원</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>질병수술비</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>상해수술비</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>질병일당</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>상해일당</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>질병 간병인지원 입원일당</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>상해 간병인지원 입원일당</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>중증치매진단</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>경증치매진단</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>유사암 진단비</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>교통사고처리 지원금</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>변호사 선임비용</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>벌금</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>자동차사고 부상치료비</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>일상생활 배상책임</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>치아보철 치료비</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>치아보존 치료비</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>화상 진단비</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>골절 진단비</td>
 							<td class="align_r">100,000</td>
 							<td class="align_r">
 								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
@@ -168,7 +384,7 @@
 						</tr>
 						<tr>
 							<td class="align_c">사망</td>
-							<td>상해사</td>
+							<td>상해사망</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
 									<input checked id="checkbox2" type="checkbox"> <label for="checkbox2"></label>
@@ -186,7 +402,7 @@
 						</tr>
 						<tr>
 							<td class="align_c">후유장해</td>
-							<td>질병 80% 후유장해</td>
+							<td>질병 80% 이상 후유장해</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
 									<input id="checkbox4" type="checkbox"> <label for="checkbox4"></label>
@@ -194,146 +410,281 @@
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">사망</td>
-							<td>질병사망</td>
+							<td class="align_c">후유장애</td>
+							<td>상해 3~79% 후유장해</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input checked id="checkbox1" type="checkbox"> <label for="checkbox1"></label>
+									<input checked id="checkbox5" type="checkbox"> <label for="checkbox5"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">사망</td>
-							<td>상해사</td>
+							<td class="align_c">휴유장해</td>
+							<td>상해 80% 이상 후유장해</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input checked id="checkbox2" type="checkbox"> <label for="checkbox2"></label>
+									<input checked id="checkbox6" type="checkbox"> <label for="checkbox6"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">후유장해</td>
-							<td>질병 3~79% 후유장해</td>
+							<td class="align_c">암</td>
+							<td>일반암 진단비</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input id="checkbox3" type="checkbox"> <label for="checkbox3"></label>
+									<input id="checkbox7" type="checkbox"> <label for="checkbox7"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">후유장해</td>
-							<td>질병 80% 후유장해</td>
+							<td class="align_c">암</td>
+							<td>고액암 진단비</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input id="checkbox4" type="checkbox"> <label for="checkbox4"></label>
+									<input id="checkbox8" type="checkbox"> <label for="checkbox8"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">사망</td>
-							<td>질병사망</td>
+							<td class="align_c">암</td>
+							<td>유사암 진단비</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input checked id="checkbox1" type="checkbox"> <label for="checkbox1"></label>
+									<input checked id="checkbox9" type="checkbox"> <label for="checkbox9"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">사망</td>
-							<td>상해사</td>
+							<td class="align_c">뇌혈관질환</td>
+							<td>뇌혈관</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input checked id="checkbox2" type="checkbox"> <label for="checkbox2"></label>
+									<input checked id="checkbox10" type="checkbox"> <label for="checkbox10"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">후유장해</td>
-							<td>질병 3~79% 후유장해</td>
+							<td class="align_c">뇌혈관질환</td>
+							<td>뇌졸중</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input id="checkbox3" type="checkbox"> <label for="checkbox3"></label>
+									<input id="checkbox11" type="checkbox"> <label for="checkbox11"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">후유장해</td>
-							<td>질병 80% 후유장해</td>
+							<td class="align_c">뇌혈관질환</td>
+							<td>뇌출혈</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input id="checkbox4" type="checkbox"> <label for="checkbox4"></label>
+									<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">사망</td>
-							<td>질병사망</td>
+							<td class="align_c">심장질환</td>
+							<td>허혈성 심장질환 진단비</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input checked id="checkbox1" type="checkbox"> <label for="checkbox1"></label>
+									<input checked id="checkbox13" type="checkbox"> <label for="checkbox13"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">사망</td>
-							<td>상해사</td>
+							<td class="align_c">심장질환</td>
+							<td>급성 심근경색증 진단비</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input checked id="checkbox2" type="checkbox"> <label for="checkbox2"></label>
+									<input checked id="checkbox14" type="checkbox"> <label for="checkbox14"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">후유장해</td>
-							<td>질병 3~79% 후유장해</td>
+							<td class="align_c">의료비</td>
+							<td>질병입원</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input id="checkbox3" type="checkbox"> <label for="checkbox3"></label>
+									<input id="checkbox15" type="checkbox"> <label for="checkbox15"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">후유장해</td>
-							<td>질병 80% 후유장해</td>
+							<td class="align_c">의료비</td>
+							<td>질병통원</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input id="checkbox4" type="checkbox"> <label for="checkbox4"></label>
+									<input id="checkbox16" type="checkbox"> <label for="checkbox16"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">사망</td>
-							<td>질병사망</td>
+							<td class="align_c">의료비</td>
+							<td>상해입원</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input checked id="checkbox1" type="checkbox"> <label for="checkbox1"></label>
+									<input checked id="checkbox17" type="checkbox"> <label for="checkbox17"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">사망</td>
-							<td>상해사</td>
+							<td class="align_c">의료비</td>
+							<td>상해통원</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input checked id="checkbox2" type="checkbox"> <label for="checkbox2"></label>
+									<input checked id="checkbox18" type="checkbox"> <label for="checkbox18"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">후유장해</td>
-							<td>질병 3~79% 후유장해</td>
+							<td class="align_c">수술비</td>
+							<td>질병수술비</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input id="checkbox3" type="checkbox"> <label for="checkbox3"></label>
+									<input id="checkbox19" type="checkbox"> <label for="checkbox19"></label>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td class="align_c">후유장해</td>
-							<td>질병 80% 후유장해</td>
+							<td class="align_c">수술비</td>
+							<td>상해수술비</td>
 							<td class="align_c">
 								<div class="check_box_set no_label">
-									<input id="checkbox4" type="checkbox"> <label for="checkbox4"></label>
+									<input id="checkbox20" type="checkbox"> <label for="checkbox20"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">입원비(일당)</td>
+							<td>질병일당</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox21" type="checkbox"> <label for="checkbox21"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">입원비(일당)</td>
+							<td>상해일당</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox22" type="checkbox"> <label for="checkbox22"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">입원비(일당)</td>
+							<td>질병 간병인지원 입원일당</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox23" type="checkbox"> <label for="checkbox23"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">입원비(일당)</td>
+							<td>상해 간병인지원 입원일당</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox24" type="checkbox"> <label for="checkbox24"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">치매</td>
+							<td>중증치매진단</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox25" type="checkbox"> <label for="checkbox25"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">치매</td>
+							<td>경증치매진단</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox26" type="checkbox"> <label for="checkbox26"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">운전자</td>
+							<td>교통사고처리 지원금</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox27" type="checkbox"> <label for="checkbox27"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">운전자</td>
+							<td>변호사 선임비용</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox28" type="checkbox"> <label for="checkbox28"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">운전자</td>
+							<td>벌금</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox29" type="checkbox"> <label for="checkbox29"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">운전자</td>
+							<td>자동차사고 부상치료비</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox30" type="checkbox"> <label for="checkbox30"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">배상책임</td>
+							<td>일상생활 배상책임</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox31" type="checkbox"> <label for="checkbox31"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">치아,화상,골절</td>
+							<td>치아보철 치료비</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox32" type="checkbox"> <label for="checkbox32"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">치아,화상,골절</td>
+							<td>치아보존 치료비</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox33" type="checkbox"> <label for="checkbox33"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">치아,화상,골절</td>
+							<td>화상 진단비</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox34" type="checkbox"> <label for="checkbox34"></label>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="align_c">치아,화상,골절</td>
+							<td>골절 진단비</td>
+							<td class="align_c">
+								<div class="check_box_set no_label">
+									<input id="checkbox35" type="checkbox"> <label for="checkbox35"></label>
 								</div>
 							</td>
 						</tr>
