팝업-권장금액보장군설정 클릭이벤트 추가

--- a/mobile/resources/html/팝업-권장금액보장군설정.html
+++ b/mobile/resources/html/팝업-권장금액보장군설정.html
@@ -22,6 +22,10 @@
 				targetCont.removeClass('active');
 				targetCont.eq(idx).addClass('active');
 			});
+			//전체선택버튼 클릭시 checked 추가
+			$(document).on("click", ".top_btn_box .icon_all_select", function () {
+				$(this).toggleClass('checked');
+			});
 		});
 	</script>
 </head>
