--- a/mobile/resources/html/가입현황-상세내역_자동차보험.html
+++ b/mobile/resources/html/가입현황-상세내역_자동차보험.html
@@ -87,96 +87,9 @@
 				</div>
 				<div class="insurance_detail_tab_cont">
 					<div class="tab_cont active">
-						<ul class="list">
-							<li>
-								<div class="item">
-									<div class="tit_info">
-										<strong class="tit">질병입원일당</strong>
-										<div class="info">상해+질병 외래의료비</div>
-									</div>
-									<div class="state_info">
-										<span class="state">정상</span> <span class="info">2천만원</span>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="item">
-									<div class="tit_info">
-										<strong class="tit">질병입원일당</strong>
-										<div class="info">상해+질병 외래의료비</div>
-									</div>
-									<div class="state_info">
-										<span class="state cancel">해지</span> <span class="info">2천만원</span>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="item">
-									<div class="tit_info">
-										<strong class="tit">질병입원일당</strong>
-										<div class="info">상해+질병 외래의료비</div>
-									</div>
-									<div class="state_info">
-										<span class="state">정상</span> <span class="info">2천만원</span>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="item">
-									<div class="tit_info">
-										<strong class="tit">질병입원일당</strong>
-										<div class="info">상해+질병 외래의료비</div>
-									</div>
-									<div class="state_info">
-										<span class="state">정상</span> <span class="info">2천만원</span>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="item">
-									<div class="tit_info">
-										<strong class="tit">질병입원일당</strong>
-										<div class="info">상해+질병 외래의료비</div>
-									</div>
-									<div class="state_info">
-										<span class="state">정상</span> <span class="info">2천만원</span>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="item">
-									<div class="tit_info">
-										<strong class="tit">질병입원일당</strong>
-										<div class="info">상해+질병 외래의료비</div>
-									</div>
-									<div class="state_info">
-										<span class="state">정상</span> <span class="info">2천만원</span>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="item">
-									<div class="tit_info">
-										<strong class="tit">질병입원일당</strong>
-										<div class="info">상해+질병 외래의료비</div>
-									</div>
-									<div class="state_info">
-										<span class="state">정상</span> <span class="info">2천만원</span>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="item">
-									<div class="tit_info">
-										<strong class="tit">질병입원일당</strong>
-										<div class="info">상해+질병 외래의료비</div>
-									</div>
-									<div class="state_info">
-										<span class="state">정상</span> <span class="info">2천만원</span>
-									</div>
-								</div>
-							</li>
-						</ul>
+						<div class="no_data">
+							<div class="txt">보장내역이 존재하지 않습니다.</div>
+						</div>
 					</div>
 					<div class="tab_cont">
 						<div class="no_data">
