--- a/mobile/resources/html/그래프.html
+++ b/mobile/resources/html/그래프.html
@@ -336,7 +336,7 @@
 				<button class="bottom_menu menu03"><span>진단상세</span></button>
 			</li>
 			<li>
-				<button class="bottom_menu menu04"><span>컨설팅</span></button>
+				<button class="bottom_menu menu04 new"><span>컨설팅</span></button>
 			</li>
 			<li>
 				<button class="bottom_menu menu05 new"><span>그래프</span></button>
