--- a/mobile/resources/html/컨설팅.html
+++ b/mobile/resources/html/컨설팅.html
@@ -81,7 +81,7 @@
 					<div class="result"><strong>13</strong></div>
 				</li>
 			</ul>
-			<div class="btn_area"><a class="btn_inner" href="#"><span>선택하신 컨설팅 전후 비교분석 결과를 확인해보세요!</span></a></div>
+			<div class="btn_area"><a class="btn_inner new" href="#"><span>선택하신 컨설팅 전후 비교분석 결과를 확인해보세요!</span></a></div>
 		</div>
 
 		<!-- insurance_list_box : s -->
