--- a/mobile/resources/보장분석_00.index.html
+++ b/mobile/resources/보장분석_00.index.html
@@ -210,11 +210,24 @@
 				<tr>
 						<td class="dep1"></td>
 						<td class="dep2"></td>
-						<td class="scr_name">가입현황</td>
+						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="html/가입현황-상세내역_자동차보험.html"  target="_blank">팝업_가입현황-상세내역-자동차보험.html</a><br>
+							<a href="html/가입현황-상세내역_자동차보험_보장내역없음.html"  target="_blank">팝업_가입현황-상세내역_자동차보험_보장내역없음.html</a><br>
 						</td>
 						<td class="date">2019.12.27</td>
+						<td class="note">
+	
+						</td>
+					</tr>
+				<tr>
+				<tr>
+						<td class="dep1"></td>
+						<td class="dep2"></td>
+						<td class="scr_name"></td>
+						<td class="scr_id">
+							<a href="html/가입현황-상세내역_해지계약건.html"  target="_blank">팝업_가입현황-상세내역_해지계약건.html</a><br>
+						</td>
+						<td class="date">2019.12.31</td>
 						<td class="note">
 	
 						</td>
