--- a/mobile/resources/html/가입현황-상세내역_해지계약건.html
+++ b/mobile/resources/html/가입현황-상세내역_해지계약건.html
@@ -52,7 +52,7 @@
 					</div>
 					<div class="etc_info">
 						<div class="left_txt">
-							<span class="state">정상</span><!-- 해지시 class 'cancel' 추가-->
+							<span class="state cancel">해지</span><!-- 해지시 class 'cancel' 추가-->
 							<div class="date">2009.07.17 ~ 2082.07.17</div>
 						</div>
 						<div class="right_txt">
